# js-to-json-logic

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
src/js_to_json_logic/: __init__.py  test_transform.py  transform.py
tests/: smoke_test.py
